1.4.28 2014-01-06
-----------------
- NODE-293 fixed issue for insert on fullResult return due to getRawResponse called incorrectly.

1.4.27 2014-01-05
-----------------
- Changed how the ServerCapabilities is populated in the driver to ensure it's always correctly added on High availability checking on ReplSet and Mongos.

1.4.26 2014-12-22
-----------------
- Minor fixes to listCollections to ensure correct querying of a collection when using a string.

1.4.25 2014-12-18
-----------------
- listCollections filters out index namespaces on < 2.8 correctly
- Use returned ns for getmores when doing command cursors.

1.4.24 2014-12-18
-----------------
- Refactored listCollections to return cursor to support 2.8 features correctly.
- Added new listIndexes helper that returns a cursor to support 2.8 features.
- Bumped kerberos to 0.0.7 to correctly compile across win/linus/osx

1.4.23 2014-12-05
-----------------
- Fixed minor replicaset reauthentication issues for High availability process.
- Added support for authdb as option for Db.prototype.logout to logout against another db than the current one when authSource has been used.
- Backported 2.0.X test suite to minimize maintenance between 1.4.x branch and 2.0.x.
- Fixed bug on 2.4.x servers when using aggregation cursor and close happens on server connection
- Updated kerberos library to 0.0.6

1.4.22 2014-11-20
-----------------
- NODE-184, Correct message size validation

1.4.20 2014-11-14
-----------------
- Removed collectionsInfo method as it's incompatible with 2.8 or higher storage engines due to using namespace collections and a cursor.
- Fix LearnBoost/mongoose#2313: don't let user accidentally clobber geoNear params (Issue #1223, https://github.com/vkarpov15)

1.4.19 2014-10-09
-----------------
- Use findOne instead of find followed by nextObject (Issue #1216, https://github.com/sergeyksv).
- NODE-294, slowness in aggregation cursor caused do to batchSize being set to 1 by mistake.