@@ -1024,9 +1024,6 @@ Db.prototype.createCollection = function(collectionName, options, callback) {
   safe = safe == null ? {w: 1} : safe;
   // Check if we have the name
   this.listCollections({name:collectionName}).toArray(function(err, collections) {
-    // console.log("------------------------------------------------- listCollections")
-    // console.dir(err)
-    // console.dir(collections)
     if(err != null) return callback(err, null);
     if(collections.length > 0 && options.strict) {
       return callback(utils.toError(f("Collection %s already exists. Currently in strict mode.", collectionName)), null);
@@ -1044,10 +1041,11 @@ Db.prototype.createCollection = function(collectionName, options, callback) {
 
     // Execute the command
     self.command(cmd, options, function(err, result) {
-      // console.log("------------------------------------------------ createCollection")
-      // console.dir(err)
-      // console.dir(result)
-      if(err && err.code && err.code != 48 && options && options.strict) return callback(err, null);
+      // Handle errors of pre-existing collections
+      if(err && err.code && (err.code != 48) && options && options.strict) return callback(err, null);
+      if(err && !err.code && err.errmsg) return callback(err, null);
+
+      // Attempt to return a collection
       try {
         callback(null, new Collection(self, collectionName, self.pkFactory, options));
       } catch(err) {
