@@ -85,7 +85,7 @@
     , "mongodb-version-manager": "0.5.0"
   }
 , "optionalDependencies": {
-      "kerberos": "0.0.7"
+      "kerberos": "0.0.8"
     , "readable-stream": "latest"
   }
 , "config":         { "native" : false }
